--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <section>
         <h2>Images</h2>
         <button class="btn btn-image">New Cat</button>
-        <div class="bg-image"></div>
+        <div class="image-container">
+          <img src="" alt="" class="cat-image" />
+        </div>
       </section>
     </div>
-    <footer>
-      <div class="wrapper">&#169; 2020 Daniel Venera<br /><i class="fa fa-github"></i></div>
-    </footer>
+    <footer>&#169; 2020 Daniel Venera<br /><i class="fa fa-github fa-2x"></i></footer>
 
     <script src="./js/script.js"></script>
   </body>
