cat fact api added

--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
       <section>
         <h2>Facts</h2>
         <button class="btn btn-fact">New fact</button>
-        <p class="fact-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi officiis quis distinctio facere commodi, nam consectetur nisi quasi temporibus incidunt molestias aut, consequatur dignissimos
-          natus! Adipisci cupiditate accusamus atque nostrum. Inventore expedita, possimus nulla necessitatibus mollitia quibusdam modi maxime asperiores accusantium numquam assumenda nobis voluptatum
-          non esse porro ducimus neque.
-        </p>
+        <p class="fact-text"></p>
       </section>
       <section>
         <h2>Images</h2>
