scroll + color changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>Cat APIs</h1>
+      <h1><i class="fa fa-paw" aria-hidden="true"></i> Cat APIs <i class="fa fa-paw" aria-hidden="true"></i></h1>
       <section>
         <h2>Facts</h2>
         <button class="btn btn-fact">New fact</button>
