meta tags + github link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
+    <meta property="og:title" content="Cat APIs" />
+    <meta property="og:description" content="2 API calls in Javascript" />
+    <meta property="og:image" content="https://c4.wallpaperflare.com/wallpaper/274/552/5/kittens-many-photoshop-wallpaper-preview.jpg" />
+    <title>Cat APIs</title>
   </head>
   <body>
     <div class="wrapper">
@@ -24,7 +28,9 @@
         </div>
       </section>
     </div>
-    <footer>&#169; 2020 Daniel Venera<br /><i class="fa fa-github fa-2x"></i></footer>
+    <footer>
+      &#169; 2020 Daniel Venera<br /><a href="https://github.com/Daniel-Venera/cat_apis" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    </footer>
 
     <script src="./js/script.js"></script>
   </body>
